--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/mobile/layout.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/mobile/layout.scss
@@ -293,13 +293,6 @@ form > .layout-content {
     }
 }
 
-.oro-item-collection {
-    .btn-icon {
-        width: $btn-icon-mobile-width;
-        height: $btn-icon-mobile-height;
-    }
-}
-
 .oro-address-collection.oro-item-collection {
     & > div {
         margin: 21px 0 20px;
